--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,13 +47,16 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-nowrap" asp-area="" asp-controller="Admin" asp-action="SiteUsers">Site Users</a>
+                                <a class="nav-link text-nowrap" asp-area="" asp-controller="Admin" asp-action="SiteUsers">Admins</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-nowrap" asp-area="" asp-controller="Admin" asp-action="Templates">Templates</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-nowrap" asp-area="" asp-controller="Admin" asp-action="FilesUpload">Upload Files</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-nowrap" asp-area="" asp-controller="Reports" asp-action="Dashboard">Reports</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-nowrap" asp-area="" asp-controller="Admin" asp-action="Imports">Imports</a>
