--- a/Views/RosterData/Orgs.cshtml
+++ b/Views/RosterData/Orgs.cshtml
@@ -52,6 +52,10 @@
                 "processing": true,
                 "paging": true,
                 "autoWidth": false,
+                "columnDefs": [{
+                    "targets": '_all',
+                    "defaultContent": ""
+                }],
                 "ajax": {
                     "url": "/RosterData/GetOrgs",
                     "type": "get"
