--- a/Views/RosterData/Users.cshtml
+++ b/Views/RosterData/Users.cshtml
@@ -91,6 +91,10 @@
             "processing": true,
             "paging": true,
             "autoWidth": false,
+            "columnDefs": [{
+                    "targets": '_all',
+                    "defaultContent": ""
+                }],
             "ajax": {
                 "url": "/RosterData/GetUsers",
                 "type": "get"
