--- a/Views/RosterData/Classes.cshtml
+++ b/Views/RosterData/Classes.cshtml
@@ -1,46 +1,106 @@
-﻿@model Classes
+﻿import { ajax } from "jquery";
+
+@model Classes
 @{
     ViewData["Title"] = "Roster Data";
 }
-<table id="classesTable" class="table">
-                <thead>
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.ClassSourcedId)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.Status)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.DateLastModified)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.Title)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.ClassCode)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.ClassType)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.Location)
-                        </th>
-                         <th>
-                            @Html.DisplayNameFor(mode => mode.CourseSourcedId)
-                        </th>
-                         <th>
-                            @Html.DisplayNameFor(mode => mode.School)
-                        </th>
-                         <th>
-                            @Html.DisplayNameFor(mode => mode.OrgSourcedId)
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    
-                </tbody>
-            </table>
+
+<!--Show Class Details and action Modal-->
+<!--------------------------------------------------------------------------------->
+<div class="modal fade" id="viewClassUsersModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="modalClassHeading"></h2>
+            </div>
+            <div class="modal-body">
+                <table id="classUsersModalDataTable" class="table table-hover">
+                    <thead class="custom-thead">
+                        <tr>
+                            <th>
+                                
+                            </th>
+                            <th>
+                                
+                            </th>
+                            <th>
+                                
+                            </th>
+                            <th>
+                                
+                            </th>
+                            <th>
+                                
+                            </th>
+                            <th>
+                                
+                            </th>
+                            <th>
+                                
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                @using (Html.BeginForm("DownloadStudentId", "Admin", FormMethod.Post))
+                {
+                    <button id="modalIdBtn" name="sourcedId" type="submit" class="btn student-modal-btn">Download Id</button>
+                }
+                @using (Html.BeginForm("DownloadStudentQrCode", "Admin", FormMethod.Post))
+                {
+                    <button id="modalQrBtn" name="sourcedId" type="submit" class="btn student-modal-btn">Download Qr</button>
+                }
+                <button class="btn student-modal-btn" onclick="ExitStudentModal()">Exit</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--------------------------------------------------------------------------------->
+
+<!--Classes Table HTML-->
+<!--------------------------------------------------------------------------------->
+<table id="classesDataTable" class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(mode => mode.ClassSourcedId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(mode => mode.Status)
+            </th>
+            <th>
+                @Html.DisplayNameFor(mode => mode.DateLastModified)
+            </th>
+            <th>
+                @Html.DisplayNameFor(mode => mode.Title)
+            </th>
+            <th>
+                @Html.DisplayNameFor(mode => mode.ClassCode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(mode => mode.ClassType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(mode => mode.Location)
+            </th>
+            <th>
+                @Html.DisplayNameFor(mode => mode.Course.CourseSourcedId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(mode => mode.School)
+            </th>
+            <th>
+                @Html.DisplayNameFor(mode => mode.School.OrgSourcedId)
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+    </tbody>
+</table>
+<!--------------------------------------------------------------------------------->
 @section scripts{
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap4.min.css" />
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.bootstrap4.min.css" />
@@ -53,10 +113,14 @@
 <script type="text/javascript" src="https://cdn.datatables.net/select/1.3.4/js/dataTables.select.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){
-            $('#classesTable').dataTable({
+            $('#classesDataTable').dataTable({
                 "processing": true,
                 "paging": true,
                 "autoWidth": false,
+                "columnDefs": [{
+                    "targets": '_all',
+                    "defaultContent": ""
+                }],
                 "ajax": {
                     "url": "/RosterData/GetClasses",
                     "type": "get"
@@ -74,6 +138,48 @@
                     {"data": "orgSourcedId", "name": "Org Sourced Id", "autoWidth": true},
                 ]
             });
+            var table = $('#classesDataTable').DataTable();
+
+            $('#classesDataTable tbody').on('click', 'tr', function () {
+            var data = table.row( this ).data();
+            console.log(data);
+            GetClassUsers(data['classSourcedId']);
+            });
         });
+        
+        function GetClassUsers(classSourcedId){
+            $.ajax({
+                url: "/RosterData/GetClassUsers",
+                type: "get",
+                data: {"classSourcedId" : classSourcedId},
+                success: function(data){
+                    console.log(data);
+                    GetClassUsersSuccess(data);
+                },
+                error: function(){
+                    console.log("Error Loading Class Users");
+                } 
+            });
+        }
+
+    function GetClassUsersSuccess(data){
+        console.log(data);
+        $('#classUsersModalDataTable').dataTable({
+        "processing": true,
+        "paging": true,
+        "autoWidth": false,
+        "columns":[
+            {"data": "userSourcedId", "name": "User Sourced Id", "autoWidth": true},
+            {"data": "status", "name": "Status", "autoWidth": true},
+            {"data": "givenName", "name": "First Name", "autoWidth": true},
+            {"data": "familyName", "name": "Last Name", "autoWidth": true},
+            {"data": "role", "name": "Role", "autoWidth": true},
+            {"data": "identifier", "name": "Identifier", "autoWidth": true},
+            {"data": "email", "name": "Email", "autoWidth": true},
+
+        ]
+        });
+        $('#viewClassUsersModal').modal('show');
+    }
     </script>
 }
