--- a/Views/RosterData/Enrollments.cshtml
+++ b/Views/RosterData/Enrollments.cshtml
@@ -15,13 +15,13 @@
                             @Html.DisplayNameFor(mode => mode.DateLastModified)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(mode => mode.UserSourcedId)
+                            @Html.DisplayNameFor(mode => mode.User.UserSourcedId)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(mode => mode.ClassSourcedId)
+                            @Html.DisplayNameFor(mode => mode.Class.ClassSourcedId)
                         </th>
                         <th>
-                            @Html.DisplayNameFor(mode => mode.OrgSourcedId)
+                            @Html.DisplayNameFor(mode => mode.School.OrgSourcedId)
                         </th>
                         <th>
                             @Html.DisplayNameFor(mode => mode.Role)
@@ -57,6 +57,10 @@
                 "processing": true,
                 "paging": true,
                 "autoWidth": false,
+                "columnDefs": [{
+                    "targets": '_all',
+                    "defaultContent": ""
+                }],
                 "ajax": {
                     "url": "/RosterData/GetEnrollments",
                     "type": "get"
