--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -279,3 +279,6 @@ h2.student-modal-header {
 
 /* Side Nav Styles
 -------------------------------------------------- */
+.modal-body{
+    display: table;
+}
